fix: UI overflow 버그 수정

--- a/Frontend/public/default.css
+++ b/Frontend/public/default.css
@@ -104,8 +104,9 @@ section {
 }
 
 body {
-    height: 100vh;
-    overflow: scroll;
+    width: 100vw;
+    height: 100%;
+
     line-height: 1;
 }
 
@@ -160,9 +161,7 @@ input[type="submit"]:foucs {
     border: none;
 }
 
-*::-webkit-scrollbar {
-    display: none;
-}
+
 
 * {
     /* scrollbar-width: none; */
